# robot_manipulation

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  test.txt
launch/: demo.launch  demo_ros.launch  dobot.launch  nodes.launch
msg/: dobot_orbit.msg  pack_current_position.msg  pack_predicted_position.msg
nodes/: demo_pydobot_ros.py  dobot_orbit_decider.py  dualshock_controller.py  image2position.py  position_predictor.py  tk_controller.py  visualizer.py  visualizerGood.py
scripts/: Dobot_controller.py  demo.py  dobot_orbit_speed.py  extract_cian.ipynb  mydobot.py  orbit.py  pack_position_prediction.py  pix2mm.ipynb  pydobot_ros.py  videoCaptureTestLoop.py
src/robot_manipulation/: DobotClient.py  Visualization.py  __init__.py  calibration.py  calibration_params.npz  hit.py  orbit.py  pydobot_ros.py  video_capture.py
